# blackbench

./: .coveragerc  .flake8  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: acknowledgements.md  analyzing_results.md  changelog.md  conf.py  contributing.md  index.md  quickstart.md  running_benchmarks.md  tasks_and_targets.md
docs/static/: custom.css
requirements/: docs-base.txt  docs-live.txt  lint-base.txt  lint-extra.txt  readthedocs.txt  tests-cov.txt
src/blackbench/: __init__.py  __main__.py  clickhacks.py  resources.py  utils.py
src/blackbench/micro-targets/: comments.py  dict-literal.py  list-literal.py  nested.py  strings-list.py
src/blackbench/misc/: dummy-benchmark.py
src/blackbench/task-templates/: format-fast-template.py  format-template.py  parse-template-LICENSE.txt  parse-template.py
tests/: blackbench_tests.py  conftest.py  integration_tests.py  smoke_tests.py  unit_tests.py  utils.py
tests/data/: all.results.json  micro.results.json  normal-goodbye-internet.json  normal-hello-world.json  normal-nested.json  normal.results.json  this-should-not-be-found.py
tests/data/micro-targets/: tiny.py
tests/data/normal-targets/: goodbye-internet.pyi  hello-world.py
tests/data/normal-targets/i/heard/you/like/: nested.py
tests/data/tasks/: fmt-template.py  paint-template.py
