[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "blackbench"
author = "Richard Si"
author-email = "63936253+ichard26@users.noreply.github.com"
home-page = "https://github.com/ichard26/blackbench"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "click>=8.0.0",
    "pyperf>=2.0.0",
]
requires-python = ">=3.8"

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12.1",
    "coverage>=5.2.1",
    "colorama>=0.4.4 ; platform_system == 'Windows'",
]
dev = [
    "black[colorama]==21.6b0",
    "mypy>=0.900",
    "flake8>=3.9.2",
    "isort>=5.8.0",
    "pre-commit>=2.9.2",
]

[tool.flit.scripts]
blackbench = "blackbench:main"

[tool.black]
experimental-string-processing = true
target-version = ["py38", "py39"]
extend-exclude = '''
/(
  src/blackbench/.*-targets
  | src/blackbench/.*-template.py
)
'''

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ["*-template.py", "*-targets"]
py_version = "38"
known_third_party = ["click", "pyperf", "colorama"]
known_first_party = ["blackbench"]

[tool.coverage.run]
omit = ['*/site-packages/*']

[tool.pytest.ini_options]
python_files = "*_tests.py"
